add more fruits

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                         <a href="#">Bitter greens</a>
                         <a href="#">Blackberry</a>
                         <a href="#">Blueberry</a>
+                        <a href="#">Blood Orange</a>
                         <a href="#">Boysenberry</a>
                         <a href="#">Black radishes</a>
                         <a href="#">borlotti Beans</a>
@@ -103,36 +104,83 @@
                         <a href="#">Chestnuts</a>
                         <a href="#">Chickpeas</a>
                         <a href="#">Celery</a>
+                        <a href="#">Clementine</a>
+                        <a href="#">Cranberry</a>
+                        <a href="#">Crenshaw Melon</a>
                         <a href="#">Cucumber</a>
+                        <a href="#">Currants</a>
                         <a href="#">Cumin</a>
                         <a href="#">Chinese artichoke</a>
                         <a href="#">Dandelion Greens</a>
+                        <a href="#">Dates</a>
+                        <a href="#">Dragon Fruit</a>
+                        <a href="#">Durian</a>
                         <a href="#">Endives</a>
                         <a href="#">Eggplant</a>
                         <a href="#">Fava beans</a>
                         <a href="#">Fennel</a>
-                        <a href="#">Flagolet Beans</a>
+                        <a href="#">Figs</a>
+                        <a href="#">Flageolet Beans</a>
                         <a href="#">Garlic</a>
+                        <a href="#">Gooseberry</a>
+                        <a href="#">Grapes</a>
+                        <a href="#">Grapefruit</a>
                         <a href="#">Ginger</a>
+                        <a href="#">Guava</a>
+                        <a href="#">Honeydew Melon</a>
+                        <a href="#">Horned Melon</a>
                         <a href="#">Horseradish</a>
+                        <a href="#">JackFruit</a>
                         <a href="#">Jerusalem</a>
+                        <a href="#">Jujube</a>
+                        <a href="#">kiwi</a>
+                        <a href="#">kumquat</a>
                         <a href="#">Lamb's Lettuce</a>
                         <a href="#">Leeks</a>
                         <a href="#">Lentils</a>
                         <a href="#">Lettuce</a>
+                        <a href="#">Lemon</a>
+                        <a href="#">Lime</a>
+                        <a href="#">Loganberry</a>
+                        <a href="#">Longan</a>
+                        <a href="#">Loquat</a>
+                        <a href="#">Lychee</a>
+                        <a href="#">Mandarin</a>
+                        <a href="#">Mango</a>
+                        <a href="#">Mangosteen</a>
+                        <a href="#">Mamoncillo</a>
                         <a href="#">Melons</a>
+                        <a href="#">Minneola</a>
+                        <a href="#">Musk Melon</a>
+                        <a href="#">Nance</a>
+                        <a href="#">Nectarine</a>
+                        <a href="#">Orange</a>
                         <a href="#">Onions</a>
+                        <a href="#">Papaya</a>
                         <a href="#">Parsley</a>
                         <a href="#">Parsnip</a>
                         <a href="#">Pattypan Squash</a>
+                        <a href="#">Passion Fruit</a>
                         <a href="#">Peas</a>
+                        <a href="#">Peach</a>
+                        <a href="#">Pear</a>
+                        <a href="#">Persimmon</a>
+                        <a href="#">Pineapple</a>
                         <a href="#">Plantains</a>
+                        <a href="#">Plum</a>
+                        <a href="#">Pommelo</a>
+                        <a href="#">Pomegranate</a>
+                        <a href="#">Prickly(cactus) Pear</a>
                         <a href="#">Purslane</a>
+                        <a href="#">Pulasan</a>
+                        <a href="#">Rambutan</a>
+                        <a href="#">Raspberries</a>
                         <a href="#">Radishes</a>
                         <a href="#">Red Kidney</a>
                         <a href="#">Rosemary</a>
                         <a href="#">Rutabaga</a>
                         <a href="#">Salsify</a>
+                        <a href="#">Satsuma</a>
                         <a href="#">Shallots</a>
                         <a href="#">Sorrel</a>
                         <a href="#">Soy</a>
@@ -144,6 +192,8 @@
                         <a href="#">Strawberry</a>
                         <a href="#">Sweet corn</a>
                         <a href="#">Sweet potatoes</a>
+                        <a href="#">Tamarillo</a>
+                        <a href="#">Tangelo</a>
                         <a href="#">Tangerine</a>
                         <a href="#">Thyme</a>
                         <a href="#">Tomato</a>
@@ -163,71 +213,139 @@
                 <div class="dropdown">
                     <button class="dropbtn">Exclude</button>
                     <div class="dropdown-content">
+                        <a href="#">Apples</a>
+                        <a href="#">Apricot</a>
                         <a href="#">Artichokes</a>
                         <a href="#">Arugula</a>
                         <a href="#">Asparagus</a>
                         <a href="#">Avocados</a>
+                        <a href="#">Banana</a>
                         <a href="#">Bean Sprouts</a>
                         <a href="#">Beetroot</a>
                         <a href="#">Bell Pepper</a>
                         <a href="#">Beetroot</a>
                         <a href="#">Bitter greens</a>
+                        <a href="#">Blackberry</a>
+                        <a href="#">Blueberry</a>
+                        <a href="#">Blood Orange</a>
+                        <a href="#">Boysenberry</a>
                         <a href="#">Black radishes</a>
                         <a href="#">borlotti Beans</a>
                         <a href="#">Broccoli</a>
                         <a href="#">Brussel sprouts</a>
                         <a href="#">Button(or white) Mushrooms</a>
+                        <a href="#">Cantaloupe</a>
+                        <a href="#">Casaba Melon</a>
                         <a href="#">Cabbage</a>
                         <a href="#">Cardoon</a>
+                        <a href="#">Canary Melon</a>
                         <a href="#">Carrots</a>
                         <a href="#">Cauliflower</a>
                         <a href="#">Celeriac</a>
                         <a href="#">Chard</a>
-                        <a href="#">Celery</a>
+                        <a href="#">Cherry</a>
+                        <a href="#">Christmas Melon</a>
+                        <a href="#">Cherimoya</a>
                         <a href="#">Chestnuts</a>
                         <a href="#">Chickpeas</a>
+                        <a href="#">Celery</a>
+                        <a href="#">Clementine</a>
+                        <a href="#">Cranberry</a>
+                        <a href="#">Crenshaw Melon</a>
                         <a href="#">Cucumber</a>
+                        <a href="#">Currants</a>
                         <a href="#">Cumin</a>
                         <a href="#">Chinese artichoke</a>
                         <a href="#">Dandelion Greens</a>
+                        <a href="#">Dates</a>
+                        <a href="#">Dragon Fruit</a>
+                        <a href="#">Durian</a>
                         <a href="#">Endives</a>
                         <a href="#">Eggplant</a>
                         <a href="#">Fava beans</a>
                         <a href="#">Fennel</a>
-                        <a href="#">Flagolet Beans</a>
+                        <a href="#">Figs</a>
+                        <a href="#">Flageolet Beans</a>
                         <a href="#">Garlic</a>
+                        <a href="#">Gooseberry</a>
+                        <a href="#">Grapes</a>
+                        <a href="#">Grapefruit</a>
                         <a href="#">Ginger</a>
+                        <a href="#">Guava</a>
+                        <a href="#">Honeydew Melon</a>
+                        <a href="#">Horned Melon</a>
                         <a href="#">Horseradish</a>
+                        <a href="#">JackFruit</a>
                         <a href="#">Jerusalem</a>
+                        <a href="#">Jujube</a>
+                        <a href="#">kiwi</a>
+                        <a href="#">kumquat</a>
                         <a href="#">Lamb's Lettuce</a>
                         <a href="#">Leeks</a>
                         <a href="#">Lentils</a>
                         <a href="#">Lettuce</a>
+                        <a href="#">Lemon</a>
+                        <a href="#">Lime</a>
+                        <a href="#">Loganberry</a>
+                        <a href="#">Longan</a>
+                        <a href="#">Loquat</a>
+                        <a href="#">Lychee</a>
+                        <a href="#">Mandarin</a>
+                        <a href="#">Mango</a>
+                        <a href="#">Mangosteen</a>
+                        <a href="#">Mamoncillo</a>
                         <a href="#">Melons</a>
+                        <a href="#">Minneola</a>
+                        <a href="#">Musk Melon</a>
+                        <a href="#">Nance</a>
+                        <a href="#">Nectarine</a>
+                        <a href="#">Orange</a>
                         <a href="#">Onions</a>
+                        <a href="#">Papaya</a>
                         <a href="#">Parsley</a>
                         <a href="#">Parsnip</a>
                         <a href="#">Pattypan Squash</a>
+                        <a href="#">Passion Fruit</a>
                         <a href="#">Peas</a>
+                        <a href="#">Peach</a>
+                        <a href="#">Pear</a>
+                        <a href="#">Persimmon</a>
+                        <a href="#">Pineapple</a>
                         <a href="#">Plantains</a>
+                        <a href="#">Plum</a>
+                        <a href="#">Pommelo</a>
+                        <a href="#">Pomegranate</a>
+                        <a href="#">Prickly(cactus) Pear</a>
                         <a href="#">Purslane</a>
+                        <a href="#">Pulasan</a>
+                        <a href="#">Rambutan</a>
+                        <a href="#">Raspberries</a>
                         <a href="#">Radishes</a>
                         <a href="#">Red Kidney</a>
                         <a href="#">Rosemary</a>
                         <a href="#">Rutabaga</a>
                         <a href="#">Salsify</a>
+                        <a href="#">Satsuma</a>
                         <a href="#">Shallots</a>
                         <a href="#">Sorrel</a>
                         <a href="#">Soy</a>
                         <a href="#">Spinach</a>
                         <a href="#">Split peas</a>
                         <a href="#">Squash</a>
+                        <a href="#">Soursop</a>
+                        <a href="#">Starfruit</a>
+                        <a href="#">Strawberry</a>
                         <a href="#">Sweet corn</a>
                         <a href="#">Sweet potatoes</a>
+                        <a href="#">Tamarillo</a>
+                        <a href="#">Tangelo</a>
+                        <a href="#">Tangerine</a>
                         <a href="#">Thyme</a>
                         <a href="#">Tomato</a>
                         <a href="#">Turnip</a>
+                        <a href="#">Ugi fruit</a>
                         <a href="#">Watercress</a>
+                        <a href="#">Watermelon</a>
                         <a href="#">Winter squash</a>
                         <a href="#">White beans</a>
                         <a href="#">Yams</a>
